--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
@@ -21,7 +21,7 @@
           branches:
             - 'origin/{branch}'
 - scm:
-    name: foreman-rpm-packaging-pr
+    name: foreman-packaging-pr
     scm:
       - git:
           name: upstream
