--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
@@ -21,12 +21,11 @@
           <<: *ghprb_defaults
 
 - trigger:
-    name: github_pr_rpm_deb
+    name: github_pr_deb
     triggers:
       - github-pull-request:
           <<: *ghprb_defaults
           white-list-target-branches:
-            - rpm/1.17
             - deb/.*
 
 - trigger:
@@ -36,9 +35,7 @@
           <<: *ghprb_defaults
           status-url: https://ci.theforeman.org/blue/organizations/jenkins/$JOB_NAME/detail/$JOB_NAME/$BUILD_ID/pipeline
           white-list-target-branches:
-            - rpm/develop
-            - rpm/1.18
-            - rpm/1.19
+            - rpm/.*
 
 - trigger:
     name: github_pr_pipeline
