Keep 30 days of packaging-pr jobs

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/foreman-packaging-rpm-pr-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/foreman-packaging-rpm-pr-test.yaml
@@ -8,6 +8,10 @@
     triggers:
       - github_pr_rpm:
           context: 'rpm'
+    properties:
+      - build-discarder:
+          days-to-keep: 30
+          artifact-days-to-keep: 30
     dsl:
       !include-raw:
         - pipelines/test/rpm_packaging.groovy
