set 120 mins timeout to test_develop_pr_katello

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop_pr_katello.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop_pr_katello.yaml
@@ -33,6 +33,12 @@
           name: slave
           values:
             - fast
+    wrappers:
+      - timeout:
+          type: absolute
+          abort: true
+          timeout: 120
+          write-description: 'Build timed out (after {{0}} minutes). Marking the build as aborted.'
     triggers:
       - github_pr:
           context: 'katello'
