--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/pr_checkout.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/pr_checkout.yaml
@@ -1,4 +1,10 @@
 - builder:
     name: pr_checkout
     builders:
-      - shell: !include-raw: scripts/pr_checkout.sh
+      - shell: |+
+          #!/bin/bash -xe
+          if [ -n "${pr_git_url}" ]; then
+            git remote add pr ${pr_git_url}
+            git fetch pr
+            git merge pr/${pr_git_ref}
+          fi
