we don't want to remove this

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_rpm.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_rpm.yaml
@@ -2,6 +2,7 @@
     name: packaging_build_rpm
     project-type: pipeline
     sandbox: false
+    concurrent: true
     parameters:
       - string:
           name: branch
