--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-client-1.20-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-client-1.20-rpm-pipeline.yaml
@@ -1,11 +1,11 @@
 - job:
-    name: foreman-client-nightly-rpm-pipeline
+    name: foreman-client-1.20-rpm-pipeline
     project-type: pipeline
     triggers:
       - timed: 'H 21 * * *'
     dsl:
       !include-raw:
-        - pipelines/release/client/nightly.groovy
+        - pipelines/release/client/1.20.groovy
         - pipelines/lib/rvm.groovy
         - pipelines/lib/ansible.groovy
         - pipelines/lib/obal.groovy
