Add push to foreman-nightly step for Rails 5.2

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/tfm-ror52-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/tfm-ror52-rpm-pipeline.yaml
@@ -13,3 +13,4 @@
         - pipelines/release/tfmROR52.groovy
         - pipelines/lib/obal.groovy
         - pipelines/lib/rpm_packaging.groovy
+        - pipelines/lib/release.groovy
