--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-katello-3.8-test.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-katello-3.8-test.yml
@@ -5,8 +5,8 @@
     sandbox: true
     dsl:
       !include-raw:
+        - pipelines/lib/foremanCentosJob.groovy
         - pipelines/test/katello/3.8.groovy
         - ../theforeman.org/pipelines/lib/foreman_infra.groovy
         - ../theforeman.org/pipelines/lib/duffy.groovy
         - ../theforeman.org/pipelines/lib/ansible.groovy
-        - ../theforeman.org/pipelines/lib/folderChanged.groovy
