Quote versions in YAML
Otherwise 1.20 ends up as a float 1.2.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/systest.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/systest.yaml
@@ -45,11 +45,11 @@
               group: 'bats'
               variables:
                 bats_environment:
-                  FOREMAN_EXPECTED_VERSION: ${{expected_version}}
+                  FOREMAN_EXPECTED_VERSION: '${{expected_version}}'
                 foreman_installer_options:
                   - '${{args}}'
                 ${{umask:+umask_mode: ${{umask}}}}
-                ${{repo:+foreman_repositories_version: ${{repo}}}}
+                ${{repo:+foreman_repositories_version: '${{repo}}'}}
                 ${{repo_environment:+foreman_repositories_environment: ${{repo_environment}}}}
                 ${{pl_puppet:+puppet_repositories_version: ${{pl_puppet}}}}
                 ${{run_hammer_tests:+foreman_testing_hammer_tests: ${{run_hammer_tests}}}}
