--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_rpm.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_rpm.yaml
@@ -6,6 +6,10 @@
       - string:
           name: project
           description: 'Name of the project to build from foreman-packaging.'
+      - string:
+          name: branch
+          default: rpm/develop
+          description: 'git branch of foreman-packaging to base on, e.g. rpm/develop, rpm/1.6'
     dsl:
       !include-raw:
         - pipelines/release/packaging_build_rpm.groovy
