katello-installer-nightly-release - include obal lib

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-installer-nightly-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-installer-nightly-release.yaml
@@ -8,3 +8,4 @@
       !include-raw:
         - pipelines/release/katelloInstallerNightlyRelease.groovy
         - pipelines/lib/rvm.groovy
+        - pipelines/lib/obal.groovy
