--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-installer-develop-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-installer-develop-release.yaml
@@ -1,16 +1,16 @@
 - job:
-    name: foreman-installer-develop-release-test
+    name: foreman-installer-develop-release
     project-type: pipeline
     concurrent: true
-#    scm:
-#      - foreman-installer:
-#          branch: 'develop'
-#    triggers:
-#      - timed: 'H 3 * * 1-5'
-#      - scm_fifteen_minutes
-#      - github
-#    publishers:
-#      - ircbot_freenode
+    properties:
+      - github:
+          url: 'https://github.com/theforeman/foreman-installer'
+    triggers:
+      - timed: 'H 3 * * 1-5'
+      - scm_fifteen_minutes
+      - github
+    publishers:
+      - ircbot_freenode
     dsl:
       !include-raw:
         - pipelines/release/foreman-installer-develop-release.groovy
