--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-packaging-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-packaging-release.yaml
@@ -11,5 +11,6 @@
     dsl:
       !include-raw:
         - pipelines/release/foreman_packaging_release.groovy
+        - pipelines/lib/git.groovy
         - pipelines/lib/obal.groovy
         - pipelines/lib/rpm_packaging.groovy
