--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-installer-develop-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-installer-develop-release.yaml
@@ -16,3 +16,4 @@
         - pipelines/release/foreman-installer-develop-release.groovy
         - pipelines/lib/rvm.groovy
         - pipelines/lib/obal.groovy
+        - pipelines/lib/git.groovy
