--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_1_21_stable.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_1_21_stable.yaml
@@ -31,7 +31,7 @@
     execution-strategy:
       combination-filter: '(ruby ==~ /2\.[0-1].*/ && puppet ==~ /3\.8.*/) || (ruby ==~ /2\.[1-9].*/ && puppet ==~ /4\.10\.9/) || (ruby ==~ /2\.[4-9].*/ && puppet ==~ /5\.3\.3/)'
     builders:
-      - test_proxy
+      - foreman-proxy
     publishers:
       - gemset_cleanup
       - ircbot_freenode
