rename test_proxy_develop job to foreman-proxy-develop-test

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-proxy-develop-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-proxy-develop-test.yaml
@@ -1,5 +1,5 @@
 - job:
-    name: test_proxy_develop
+    name: foreman-proxy-develop-test
     project-type: matrix
     properties:
       - github:
