rename proxy.sh script to foreman-proxy.sh

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/foreman-proxy.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/foreman-proxy.yaml
@@ -1,4 +1,4 @@
 - builder:
     name: foreman-proxy
     builders:
-      - shell: !include-raw: scripts/test/proxy.sh
+      - shell: !include-raw: scripts/test/foreman-proxy.sh
