--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-proxy-develop-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-proxy-develop-test.yaml
@@ -8,7 +8,6 @@
       - foreman-proxy:
           branch: 'develop'
     triggers:
-      - scm_fifteen_minutes
       - github
     axes:
       - axis:
@@ -34,13 +33,9 @@
       - foreman-proxy
     publishers:
       - gemset_cleanup
-      - ircbot_freenode
+      - trigger-parameterized-builds:
+          - project: foreman-proxy-develop-release
+            condition: SUCCESS
       - junit:
           results: 'jenkins/reports/unit/*.xml'
-      - archive:
-          artifacts: 'pkg/*'
-          only-if-success: true
-      - release_nightly_build_foreman_rpm:
-          project: packages/foreman/foreman-proxy
-      - release_nightly_build_foreman_deb:
-          project: foreman-proxy
+      - ircbot_freenode
