move the extra vars file writing into an own function

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/katello-master-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/katello-master-release.yaml
@@ -8,5 +8,6 @@
       !include-raw:
         - pipelines/vars/katello-master-release.groovy
         - pipelines/release/rubygemRPMNightlyRelease.groovy
+        - pipelines/lib/ansible.groovy
         - pipelines/lib/obal.groovy
         - pipelines/lib/rvm.groovy
