--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/foreman-packaging-rpm-pr-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/foreman-packaging-rpm-pr-test.yaml
@@ -17,4 +17,5 @@
         - pipelines/lib/rpm_packaging.groovy
         - pipelines/lib/koji.groovy
         - pipelines/lib/git.groovy
+        - pipelines/lib/ansible.groovy
         - pipelines/lib/obal.groovy
