--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_rpm.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_rpm.yaml
@@ -13,4 +13,5 @@
     dsl:
       !include-raw:
         - pipelines/release/packaging_build_rpm.groovy
+        - pipelines/lib/ansible.groovy
         - pipelines/lib/obal.groovy
