--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-packaging-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-packaging-release.yaml
@@ -12,5 +12,6 @@
       !include-raw:
         - pipelines/release/foreman_packaging_release.groovy
         - pipelines/lib/git.groovy
+        - pipelines/lib/ansible.groovy
         - pipelines/lib/obal.groovy
         - pipelines/lib/rpm_packaging.groovy
