--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-installer-nightly-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-installer-nightly-release.yaml
@@ -8,4 +8,5 @@
       !include-raw:
         - pipelines/release/katelloInstallerNightlyRelease.groovy
         - pipelines/lib/rvm.groovy
+        - pipelines/lib/ansible.groovy
         - pipelines/lib/obal.groovy
