--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_build_rpm.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_build_rpm.yaml
@@ -20,4 +20,5 @@
     dsl:
       !include-raw:
         - pipelines/release/release-nightly-build-rpm.groovy
+        - pipelines/lib/ansible.groovy
         - pipelines/lib/obal.groovy
