--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/tfm-ror51-pr-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/tfm-ror51-pr-test.yaml
@@ -13,4 +13,5 @@
         - pipelines/test/tfmROR51.groovy
         - pipelines/lib/rpm_packaging.groovy
         - pipelines/lib/git.groovy
+        - pipelines/lib/ansible.groovy
         - pipelines/lib/obal.groovy
