--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/tfm-ror52-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/tfm-ror52-rpm-pipeline.yaml
@@ -12,6 +12,7 @@
       !include-raw:
         - pipelines/release/tfmROR52.groovy
         - pipelines/lib/git.groovy
+        - pipelines/lib/ansible.groovy
         - pipelines/lib/obal.groovy
         - pipelines/lib/rpm_packaging.groovy
         - pipelines/lib/release.groovy
