--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-installer-develop-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-installer-develop-release.yaml
@@ -14,5 +14,6 @@
       !include-raw:
         - pipelines/release/foreman-installer-develop-release.groovy
         - pipelines/lib/rvm.groovy
+        - pipelines/lib/ansible.groovy
         - pipelines/lib/obal.groovy
         - pipelines/lib/git.groovy
