--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-installer-develop-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-installer-develop-release.yaml
@@ -14,6 +14,7 @@
       !include-raw:
         - pipelines/vars/foreman-installer-develop-release.groovy
         - pipelines/release/foreman-x-develop-release.groovy
+        - pipelines/lib/foreman_infra.groovy
         - pipelines/lib/rvm.groovy
         - pipelines/lib/obal.groovy
         - pipelines/lib/git.groovy
