--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-selinux-develop-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-selinux-develop-release.yaml
@@ -6,6 +6,7 @@
       - github:
           url: 'https://github.com/theforeman/foreman-selinux'
     triggers:
+      - timed: 'H 3 * * 1'
       - github
     publishers:
       - ircbot_freenode
