Trigger Katello pipeline builds after Foreman

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-rpm-pipeline.yaml
@@ -3,6 +3,12 @@
     project-type: pipeline
     triggers:
       - timed: 'H 21 * * *'
+      - build-result:
+           groups:
+            - jobs:
+                - foreman-installer-develop-release
+              results:
+                - success
     dsl:
       !include-raw:
         - pipelines/release/foremanRelease.groovy
