Pin bundler to < 2.0
Bundler 2.0 requires ruby 2.3 and rubygems 3.0 or later, breaking all of
our pipelines. This is a temporary pin to get CI working again until we
figure out which pipelines can be upgraded to the newer version and
which cannot.

Fixes #894

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/smart-proxy-plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/smart-proxy-plugin.yaml
@@ -13,7 +13,7 @@
           rvm gemset empty --force
           set -x
 
-          gem install bundler --no-ri --no-rdoc
+          gem install bundler -v '< 2.0' --no-ri --no-rdoc
 
           bundle install --retry 5 --jobs 5
           bundle exec rake TESTOPTS="-v"
