--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/foreman-plugins-pull-request.yaml
@@ -29,7 +29,7 @@
           gemset=$(echo ${{JOB_NAME}} | cut -d/ -f1)-${{EXECUTOR_NUMBER}}
           rvm use ruby-${{ruby}}@${{gemset}} --create
           rvm gemset empty --force
-          gem install bundler --no-ri --no-rdoc
+          gem install bundler -v '< 2.0' --no-ri --no-rdoc
 
           bundle install --without development --jobs=5 --retry=5
 
