Remove organization/location enabling in CI
Organizations an Locations are now always enabled, no need to manually
enable them in the ci pipelines.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/foreman-plugins-pull-request.yaml
@@ -20,8 +20,7 @@
           cd ${{APP_ROOT}}
 
           # setup basic settings file
-          sed -e 's/:locations_enabled: false/:locations_enabled: true/' ${{APP_ROOT}}/config/settings.yaml.example > ${{APP_ROOT}}/config/settings.yaml
-          sed -i 's/:organizations_enabled: false/:organizations_enabled: true/' ${{APP_ROOT}}/config/settings.yaml
+          cp $APP_ROOT/config/settings.yaml.example $APP_ROOT/config/settings.yaml
 
           # RVM Ruby environment
           . /etc/profile.d/rvm.sh
