Fix tfm-ror52 missing RVM and refactor push_rpms

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/tfm-ror52-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/tfm-ror52-rpm-pipeline.yaml
@@ -16,3 +16,4 @@
         - pipelines/lib/obal.groovy
         - pipelines/lib/rpm_packaging.groovy
         - pipelines/lib/release.groovy
+        - pipelines/lib/rvm.groovy
