Revert "Skip Ubuntu tests in release_nightly_test_deb"
This reverts commit c593b80995c1a750d0e7058c426daf24ec52d236.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
@@ -14,9 +14,8 @@
           name: os
           values:
           - debian9
-          # TODO: nova provisioning is broken on rackspace
-          #- ubuntu1604
-          #- ubuntu1804
+          - ubuntu1604
+          - ubuntu1804
       - axis:
           type: label-expression
           name: label
