--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
@@ -20,7 +20,6 @@
           name: arch
           values:
           - x86
-          - armv7
           - armv8
       - axis:
           type: slave
@@ -28,7 +27,7 @@
           values:
           - debian
     execution-strategy:
-      combination-filter: '((onlyarch == "all") || onlyarch == arch) && ((onlyos == "all") || onlyos == os) && !(version != 1.17 && arch == "armv7") && !((version == "1.17" || version == "1.18") && os == "bionic")'
+      combination-filter: '((onlyarch == "all") || onlyarch == arch) && ((onlyos == "all") || onlyos == os)'
     builders:
       - build_deb_coreproject
     publishers:
@@ -59,7 +58,6 @@ Any value other than "theforeman" will be pushed to http://stagingdeb.theforeman
           choices:
             - all
             - x86
-            - armv7
             - armv8
           description: 'Restrict matrix job to just the one arch.'
       - string:
