--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
@@ -15,7 +15,8 @@
           values:
           - debian9
           - ubuntu1604
-          - ubuntu1804
+          # nova provisioning is broken on rackspace
+          #- ubuntu1804
       - axis:
           type: label-expression
           name: label
