disable concurrency for release jobs

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/hammer-cli-katello-master-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/hammer-cli-katello-master-release.yaml
@@ -2,6 +2,7 @@
     name: hammer-cli-katello-master-release
     project-type: pipeline
     sandbox: false
+    concurrent: false
     triggers:
       - github
     dsl:
