--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-selinux-develop-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-selinux-develop-release.yaml
@@ -1,7 +1,7 @@
 - job:
     name: foreman-selinux-develop-release
     project-type: pipeline
-    concurrent: true
+    concurrent: false
     properties:
       - github:
           url: 'https://github.com/theforeman/foreman-selinux'
