--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/tfm-ror51-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/tfm-ror51-release.yaml
@@ -2,6 +2,7 @@
 - job:
     name: tfm-ror51-release
     project-type: pipeline
+    concurrent: false
     properties:
       - github:
           url: https://github.com/theforeman/tfm-ror51-packaging
