--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/hammer-cli-katello-master-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/hammer-cli-katello-master-release.yaml
@@ -3,6 +3,7 @@
     project-type: pipeline
     concurrent: false
     sandbox: false
+    concurrent: false
     triggers:
       - github
     dsl:
