Disable concurrent hammer builds
While it has disableConcurrentBuilds, it doesn't appear to actually
apply this because we still see concurrent jobs.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/hammer-cli-katello-master-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/hammer-cli-katello-master-release.yaml
@@ -1,6 +1,7 @@
 - job:
     name: hammer-cli-katello-master-release
     project-type: pipeline
+    concurrent: false
     sandbox: false
     triggers:
       - github
