--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
@@ -76,7 +76,7 @@ Any value other than "theforeman" will be pushed to http://stagingdeb.theforeman
           name: nightly_jenkins_job
           choices:
             - test_develop
-            - test_proxy_develop
+            - smart-proxy-develop-release
             - foreman-installer-develop-release
           description: 'When building nightly (develop), name of the Jenkins job that contains the source file(s) (tarballs, gems) to build, e.g. test_develop'
       - string:
