Fix GIT_COMMIT on foreman-develop-release publisher

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/publishers/foreman-develop-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/publishers/foreman-develop-release.yaml
@@ -5,4 +5,4 @@
         - project: foreman-develop-release
           condition: SUCCESS
           predefined-parameters: |
-            git_ref=${{GIT_COMMIT}}
+            git_ref=${GIT_COMMIT}
