Drop test_develop in favor of foreman-develop-test

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/tests/foreman-develop-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/tests/foreman-develop-test.yaml
@@ -2,6 +2,8 @@
     name: foreman-develop-test
     project-type: pipeline
     concurrent: false
+    triggers:
+      - github
     dsl:
       !include-raw:
         - pipelines/test/test_foreman.groovy
