Add hammer-cli-develop-release job

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop.yaml
@@ -43,4 +43,5 @@
           only-if-success: false
       - junit:
           results: 'jenkins/reports/unit/*.xml'
-      - foreman-develop-release
+      - trigger-release-job:
+          job: foreman-develop-release
