--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/publishers/trigger-release-job.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/publishers/trigger-release-job.yaml
@@ -1,8 +1,8 @@
 - publisher:
-    name: foreman-develop-release
+    name: trigger-release-job
     publishers:
       - trigger-parameterized-builds:
-        - project: foreman-develop-release
+        - project: '{job}'
           condition: SUCCESS
           predefined-parameters: |
-            git_ref=${GIT_COMMIT}
+            git_ref=${{GIT_COMMIT}}
