--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-rpm-pipeline.yaml
@@ -10,6 +10,7 @@
     dsl:
       !include-raw:
         - pipelines/release/foremanRelease.groovy
+        - pipelines/test/katelloDevel.groovy
         - pipelines/lib/rvm.groovy
         - pipelines/lib/ansible.groovy
         - pipelines/lib/foreman_infra.groovy
