add ansible.groovy to foreman-selinux-develop-release
otherwise obal() does not work properly

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-selinux-develop-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-selinux-develop-release.yaml
@@ -17,5 +17,6 @@
         - pipelines/lib/foreman_infra.groovy
         - pipelines/lib/rvm.groovy
         - pipelines/lib/obal.groovy
+        - pipelines/lib/ansible.groovy
         - pipelines/lib/git.groovy
         - pipelines/lib/nightly_packaging.groovy
