Add Ruby 2.5 & Puppet 6 to the Kafo master test matrix

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_master.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_master.yaml
@@ -20,16 +20,18 @@
           - '2.2'
           - '2.3'
           - '2.4'
+          - '2.5'
       - axis:
           type: user-defined
           name: puppet
           values:
           - '4.10'
           - '5.0'
+          - '6.0'
     execution-strategy:
-      combination-filter: '!(ruby ==~ /^2\.[0-3]/ && puppet ==~ /^5\..*/)'
+      combination-filter: '!(ruby ==~ /^2\.[0-3].*/ && puppet ==~ /^[56]\..*/)'
       touchstone:
-        expr: 'ruby=="2.1" && puppet=="4.10"'
+        expr: 'ruby=="2.5" && puppet=="6.0"'
         result: 'stable'
     builders:
       - test_kafo
