Drop arm builds from nightlies

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_build_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_build_deb.yaml
@@ -12,6 +12,7 @@
           predefined-parameters: |
             repoowner=theforeman
             project=${project}
+            onlyarch=x86
             onlyos=all
             repo=develop
             version=nightly
