Do not test kafo on ruby 2 + puppet 5/6

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_pull_request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_pull_request.yaml
@@ -34,7 +34,7 @@
           - '5.0'
           - '6.0'
     execution-strategy:
-      combination-filter: '!(ruby ==~ /^2\.[0-3]/ && puppet ==~ /^[56]\..*/)'
+      combination-filter: '!(ruby ==~ /^2\.[0-3].*/ && puppet ==~ /^[56]\..*/)'
       touchstone:
         expr: 'ruby=="2.5" && puppet=="6.0"'
         result: 'stable'
