also run luna nightly once a week w/o trigger

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/luna-nightly-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/luna-nightly-rpm-pipeline.yaml
@@ -3,6 +3,7 @@
     project-type: pipeline
     sandbox: true
     triggers:
+      - timed: 'H 23 * * Wed'
       - reverse:
           jobs:
             - katello-nightly-rpm-pipeline
