also run luna nightly once a week w/o trigger

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/luna-nightly-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/luna-nightly-rpm-pipeline.yaml
@@ -2,6 +2,7 @@
     name: luna-nightly-rpm-pipeline
     project-type: pipeline
     triggers:
+      - timed: 'H 23 * * Wed'
       - reverse:
           jobs:
             - katello-nightly-rpm-pipeline
