Refactor mashing to use single scripts with parameters

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_mash_rpms.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_mash_rpms.yaml
@@ -7,4 +7,8 @@
       - string:
           name: script
           default: 'foreman-mash-split.py'
-          description: 'Change for specific versions, e.g. foreman-mash-split-1.6.py'
+          description: 'Change for different repositories'
+      - string:
+          name: version
+          default: 'nightly'
+          description: 'The version to mash, e.g. nightly or 1.21'
