Use the mash credential
This changes from using SSH credential on disk to credentials stored in
Jenkins as secrets.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-plugins-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-plugins-rpm-pipeline.yaml
@@ -6,5 +6,6 @@
     dsl:
       !include-raw:
         - pipelines/release/foremanPluginsRelease.groovy
+        - pipelines/lib/release.groovy
         - pipelines/lib/rvm.groovy
         - pipelines/lib/foreman_infra.groovy
