--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-3.9-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-3.9-rpm-pipeline.yaml
@@ -4,5 +4,6 @@
     dsl:
       !include-raw:
         - pipelines/release/katello/3.9.groovy
+        - pipelines/lib/release.groovy
         - pipelines/lib/ansible.groovy
         - pipelines/lib/foreman_infra.groovy
