--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/puppet-deploy.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/puppet-deploy.yaml
@@ -10,7 +10,7 @@
           cron: 'H/5 * * * *'
     dsl:
       !include-raw:
-        - pipelines/release/puppetDeploy.groovy
+        - pipelines/deploy/puppet.groovy
         - pipelines/lib/foreman_infra.groovy
     publishers:
       - ircbot_freenode
